feature : SystemActionLog 수집 기능 및 회원 비회면 구분 저장 기능 구현